# Server

./: .gitignore  README.md  pyproject.toml
server/: __main__.py
